<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NoteActivity"
    tools:showIn="@layout/activity_note">

    <Spinner
        android:id="@+id/spinner_note_selector"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:nextFocusRight="@+id/edit_note_head"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_note_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_note_head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/heading_hint"

        android:inputType="textMultiLine"
        android:nextFocusRight="@+id/edit_note_content"

        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_note_content"
        app:layout_constraintEnd_toEndOf="@+id/spinner_note_selector"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner_note_selector"
        app:layout_constraintTop_toBottomOf="@id/spinner_note_selector" />

    <EditText
        android:id="@+id/edit_note_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/jolt_your_notes_here_hint"
        android:inputType="textMultiLine"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_note_head"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edit_note_head"
        app:layout_constraintTop_toBottomOf="@+id/edit_note_head" />

    <view
        android:id="@+id/module_status_view"
        class="ke.co.keronei.student.ModuleStatusView"
        id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_note_content"
        app:layout_constraintStart_toStartOf="@+id/edit_note_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_note_content"
        app:outlineColor="@android:color/holo_green_dark"
        app:outlineWidth="5dp"
        app:shape="circle" />
</android.support.constraint.ConstraintLayout>