<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ke.co.keronei.student.NoteActivity">
    <item
        android:id="@+id/discard_note"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="99"
        android:title="Cancel"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/move_to_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="101"
        android:title="Next"

        app:showAsAction="ifRoom|withText" />


    <item
        android:id="@+id/send_mail"
        android:orderInCategory="102"
        android:title="Share via Mail"
        app:showAsAction="never" />
    <item
        android:id="@+id/set_reminder"
        android:icon="@android:drawable/ic_popup_reminder"
        android:orderInCategory="103"
        android:title="Remind me"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>
